--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     padding-top: 5rem;
-    background: url(/img/cover.jpg);
+    background: url(/assets/img/cover.jpg);
     background-size: cover;
 }
 
