--- a/atc/assets/css/style.css
+++ b/atc/assets/css/style.css
@@ -1,6 +1,20 @@
 body {
+    width: 200px;
+    height: 200px;
+}
+
+body:before {
+    display: block;
+    content: "";
+    position: fixed;
+    top: -5%;
+    left: -5%;
+    right: -5%;
+    bottom: -5%;
+    z-index: -1;
     background: url(../img/cover.jpg);
     background-size: cover;
+    filter: blur(5px) brightness(0.6);
 }
 
 ul {
@@ -40,7 +54,11 @@ ul {
 
 .card-footer {
     color: aliceblue;
-    background-color: #357404; /* Custom */
+    background-color: #357404;
+}
+
+.card {
+    border: none;
 }
 
 .navbar {
